Bug 136402 - FILEOPEN XLSX Custom label text survives turning off / on the labels
Summary: FILEOPEN XLSX Custom label text survives turning off / on the labels
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-09-02 12:56 UTC by NISZ LibreOffice Team
Modified: 2020-09-24 07:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (14.02 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-09-02 12:56 UTC, NISZ LibreOffice Team
Details
Custom data label is deleted (21.38 KB, image/png)
2020-09-02 12:56 UTC, NISZ LibreOffice Team
Details
Custom data label returned (27.63 KB, image/png)
2020-09-02 12:57 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-09-02 12:56:23 UTC
Created attachment 165023 [details]
Example file from Excel

Attached example file has a custom label for one datapoint.
It is possible in Excel to turn off / on data labels for the chart. This makes the custom label disappear on turning on labels again.
In Calc turning off the labels does not forget the custom data label, turning back on the data labels brings back the custom label too.

Steps to reproduce:
    1. Open attached file in Excel
    2. On the Design ribbon of the chart select Add chart component -> Data Labels > None, then re-add the data label.
    3. The custom data label is gone.
    4. Open the attached file in Calc
    5. From the charts context menu select Delete Data Labels
    6. From the Insert menu select Data Labels
    7. OR:
           6. a) select the data label of c data point and press Delete 
           6. b) from the context menu of the c data point select Delete Single Data Label
    8. From the context menu of the c data point select Insert Single Data Label

Actual results:
Custom data label reappears.

Expected results:
Default data label appears.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 4c20bb789c7536f63a6844a4cb4489a18cee53c7
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-09-02 12:56:47 UTC
Created attachment 165024 [details]
Custom data label is deleted
Comment 2 NISZ LibreOffice Team 2020-09-02 12:57:02 UTC
Created attachment 165026 [details]
Custom data label returned
Comment 3 Commit Notification 2020-09-24 07:30:38 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0dce53516011f5d2d9408501714e2b1865517119

tdf#136402 Chart View: remove custom label text

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.