tdf#136402 Chart View: remove custom label text

Now Delete Data Labels and Insert Data Labels local
menu options remove custom label text instead of keeping it.
See with unit test document custom_data_label.xlsx of
commit bcda268cde1f8408c2066ce985acedfce3e3bc2e
(tdf#134977 Chart OOXML: fix import of custom data label).

Change-Id: Ifc7afd0f2ece9da528e6206a6bd393b394b36f9e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/101929
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>